--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,45 +12,54 @@
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+
+          <a class="navbar-brand" href="#"><img src="assets/css.png" width="60"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
             <span class="navbar-toggler-icon"></span>
+
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Sobre Mim</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
+
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#">Habilidades</a>
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projetos</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contato</a>
+              </li>
+
+
             </ul>
             <form class="d-flex" role="search">
+
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+
               <button class="btn btn-outline-success" type="submit">Search</button>
+
             </form>
           </div>
         </div>
       </nav>
 
     
-    <h1>Hello, world!</h1>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
   </body>
