--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -15,7 +15,7 @@
 
         <div class="container">
 
-          <a class="navbar-brand" href="#"><img src="assets/css.png" width="60"></a>
+          <a class="navbar-brand" href="#"><img src="assets/Logo.png" width="80"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,8 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -45,7 +46,6 @@
                 <a class="nav-link" href="#">Contato</a>
               </li>
 
-
             </ul>
             <form class="d-flex" role="search">
 
@@ -57,7 +57,17 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
+
+    
+    <section class="d-flex align-items-center vh-100 vw-100" style="background-image: url('https://images.unsplash.com/photo-1607743386760-88ac62b89b8a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+
+        <div class="container text-center text-white">
+            <h1>Carlos Eduardo - Desenvolvedor</h1>
+            <p>HTML | CSS | JS | BOOTSTRAP | JAVA | PYTHON</p>
+        </div>
+
+    </section>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
