--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -10,7 +10,7 @@
   </head>
 
 
-  <body>
+  <body style="background-color: black;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
         <div class="container">
@@ -31,7 +31,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Sobre Mim</a>
+                <a class="nav-link" href="#about">Sobre Mim</a>
               </li>
 
               <li class="nav-item">
@@ -67,6 +67,36 @@
             <p>HTML | CSS | JS | BOOTSTRAP | JAVA | PYTHON</p>
         </div>
 
+    </section>
+
+    <section id="about">
+      <div class="card container">
+
+        <div class="card-body align-items-center">
+
+          <h2 class="card-title">Sobre Mim</h2>
+          </br>
+
+          <p class="card-text">Sou apaixonado por tecnologia e programação, com experiência prática em automação, desenvolvimento de sistemas e criação de sites. Atuo na área de projetos com foco em robótica e RPA, e tenho conhecimentos em linguagens como Java, Python, LabVIEW e HTML/CSS. Estudo Ciência da Computação, faço cursos técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios. Gosto de aprender, resolver problemas e transformar ideias em código.</p>
+
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container text-center">
+        <div class="row align-items-center">
+          <div class="col">
+            One of three columns
+          </div>
+          <div class="col">
+            One of three columns
+          </div>
+          <div class="col">
+            One of three columns
+          </div>
+        </div>
+      </div>
     </section>
 
     
