--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,106 +1,153 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap</title>
 
-  </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
-
-  <body style="background-color: black;">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-
-        <div class="container">
-
-          <a class="navbar-brand" href="#"><img src="assets/Logo.png" width="80"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-
-            <span class="navbar-toggler-icon"></span>
-
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#about">Sobre Mim</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Habilidades</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projetos</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
-              </li>
-
-            </ul>
-            <form class="d-flex" role="search">
-
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+</head>
 
 
-              <button class="btn btn-outline-success" type="submit">Search</button>
+<body style="background-color: black;">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
-            </form>
-          </div>
-        </div>
-    </nav>
+    <div class="container">
 
-    
-    <section class="d-flex align-items-center vh-100 vw-100" style="background-image: url('https://images.unsplash.com/photo-1607743386760-88ac62b89b8a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+      <a class="navbar-brand" href="#"><img src="assets/Logo.png" width="80"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
-        <div class="container text-center text-white">
-            <h1>Carlos Eduardo - Desenvolvedor</h1>
-            <p>HTML | CSS | JS | BOOTSTRAP | JAVA | PYTHON</p>
-        </div>
+        <span class="navbar-toggler-icon"></span>
 
-    </section>
+      </button>
 
-    <section id="about">
-      <div class="card container">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <div class="card-body align-items-center">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-          <h2 class="card-title">Sobre Mim</h2>
-          </br>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
 
-          <p class="card-text">Sou apaixonado por tecnologia e programação, com experiência prática em automação, desenvolvimento de sistemas e criação de sites. Atuo na área de projetos com foco em robótica e RPA, e tenho conhecimentos em linguagens como Java, Python, LabVIEW e HTML/CSS. Estudo Ciência da Computação, faço cursos técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios. Gosto de aprender, resolver problemas e transformar ideias em código.</p>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">Sobre Mim</a>
+          </li>
 
-        </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Habilidades</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projetos</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contato</a>
+          </li>
+
+        </ul>
+        <form class="d-flex" role="search">
+
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+
+          <button class="btn btn-outline-success" type="submit">Search</button>
+
+        </form>
       </div>
-    </section>
+    </div>
+  </nav>
 
-    <section>
-      <div class="container text-center">
-        <div class="row align-items-center">
-          <div class="col">
-            One of three columns
-          </div>
-          <div class="col">
-            One of three columns
-          </div>
-          <div class="col">
-            One of three columns
+
+  <section class="d-flex align-items-center vh-100 vw-100"
+    style="background-image: url('https://images.unsplash.com/photo-1607743386760-88ac62b89b8a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+
+    <div class="container text-center text-white">
+      <h1>Carlos Eduardo - Desenvolvedor</h1>
+      <p>HTML | CSS | JS | BOOTSTRAP | JAVA | PYTHON</p>
+    </div>
+
+  </section>
+
+  <section id="about">
+    <div class="card container">
+
+      <div class="card-body align-items-center">
+
+        <h2 class="card-title">Sobre Mim</h2>
+        </br>
+
+        <p class="card-text">Sou apaixonado por tecnologia e programação, com experiência prática em automação,
+          desenvolvimento de sistemas e criação de sites. Atuo na área de projetos com foco em robótica e RPA, e tenho
+          conhecimentos em linguagens como Java, Python, LabVIEW e HTML/CSS. Estudo Ciência da Computação, faço cursos
+          técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios.
+          Gosto de aprender, resolver problemas e transformar ideias em código.</p>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="py-5 vw-100">
+    <div class="container text-center">
+
+      <h2 class="text-center mb-5">Minhas Habilidades</h2>
+
+      <div class="row align-items-center mt-5">
+        <div class="col">
+
+          <div class="card container">
+            <img src="assets/html.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">HTML</h5>
+            </div>
           </div>
         </div>
+
+
+        <div class="col">
+          <div class="card container">
+            <img src="assets/css.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CSS</h5>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col">
+
+          <div class="card container">
+            <img src="assets/js.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">JAVA SCRIPT</h5>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+
+          <div class="card container">
+            <img src="assets/react.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">REACT</h5>
+            </div>
+          </div>
+        </div>
+
       </div>
-    </section>
+    </div>
+  </section>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
