--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -93,14 +93,43 @@
 
   <section class="py-5 vw-100">
     <div class="container text-center">
-
       <h2 class="text-center mb-5">Minhas Habilidades</h2>
-
-      <div class="row align-items-center mt-5">
+      <div class="row mt-5 width-300px">
         <div class="col">
 
-          <div class="card container">
-            <img src="assets/html.png" class="card-img-top" alt="...">
+          <div class="card">
+            <img src="./assets/css.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CSS</h5>
+            </div>
+          </div>
+
+        </div>
+        <div class="col">
+
+          <div class="card">
+            <img src="./assets/js.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CSS</h5>
+            </div>
+          </div>
+
+        </div>
+        <div class="col">
+
+          <div class="card">
+            <img src="./assets/html.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">HTML</h5>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col">
+
+          <div class="card">
+            <img src="./assets/react.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
             </div>
@@ -108,39 +137,20 @@
         </div>
 
 
-        <div class="col">
-          <div class="card container">
-            <img src="assets/css.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CSS</h5>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col">
-
-          <div class="card container">
-            <img src="assets/js.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">JAVA SCRIPT</h5>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-
-          <div class="card container">
-            <img src="assets/react.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">REACT</h5>
-            </div>
-          </div>
-        </div>
 
       </div>
     </div>
+  </section>
+
+
+
+
+
+
+  <section>
+
+
+
   </section>
 
 
