--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -6,8 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
+  <style>
+    .habilidade-img {
+      width: 100px;
+    }
+  </style>
 
 </head>
 
@@ -27,7 +32,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">x
 
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -38,7 +43,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Habilidades</a>
+            <a class="nav-link" href="#habilidades">Habilidades</a>
           </li>
 
           <li class="nav-item">
@@ -91,17 +96,14 @@
     </div>
   </section>
 
-  <section class="py-5 vw-100">
+  <section class="py-5 vw-100" id="habilidades">
     <div class="container text-center">
-      <h2 class="text-center mb-5">Minhas Habilidades</h2>
-      <div class="row mt-5 width-300px">
+      <h2 class="text-center mb-5">Habilidades Front-End</h2>
+      <div class="row mt-5">
         <div class="col">
 
           <div class="card">
             <img src="./assets/css.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CSS</h5>
-            </div>
           </div>
 
         </div>
@@ -109,9 +111,6 @@
 
           <div class="card">
             <img src="./assets/js.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CSS</h5>
-            </div>
           </div>
 
         </div>
@@ -119,9 +118,6 @@
 
           <div class="card">
             <img src="./assets/html.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">HTML</h5>
-            </div>
           </div>
 
         </div>
@@ -129,14 +125,16 @@
         <div class="col">
 
           <div class="card">
-            <img src="./assets/react.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">HTML</h5>
-            </div>
+            <img src="./assets/Git.png" class="card-img-top" alt="...">
           </div>
         </div>
 
+        <div class="col">
 
+          <div class="card">
+            <img src="./assets/Bootstrap.png" class="card-img-top" alt="...">
+          </div>
+        </div>
 
       </div>
     </div>
