--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -32,7 +32,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">x
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -91,8 +91,14 @@
           conhecimentos em linguagens como Java, Python, LabVIEW e HTML/CSS. Estudo Ciência da Computação, faço cursos
           técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios.
           Gosto de aprender, resolver problemas e transformar ideias em código.</p>
-
       </div>
+
+      <div class=" gap-2 d-md-block mb-2" style="align-self: center;">
+        <a href="www.linkedin.com/in/c4martins"><button class="btn btn-primary " type="button">Linkedin</button></a>
+
+        <a href="https://github.com/ICarlos-EduardoI"><button class="btn btn-primary " type="button">GitHub</button></a>
+      </div>
+
     </div>
   </section>
 
@@ -140,13 +146,7 @@
     </div>
   </section>
 
-
-
-
-
-
   <section>
-
 
 
   </section>
