--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -46,14 +46,6 @@
             <a class="nav-link" href="#habilidades">Habilidades</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projetos</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
-          </li>
-
         </ul>
       </div>
     </div>
@@ -78,11 +70,7 @@
         <h2 class="card-title">Sobre Mim</h2>
         </br>
 
-        <p class="card-text">Sou apaixonado por tecnologia e programação, com experiência prática em automação,
-          desenvolvimento de sistemas e criação de sites. Atuo na área de projetos com foco em robótica e RPA, e tenho
-          conhecimentos em linguagens como Java, Python, LabVIEW e HTML/CSS. Estudo Ciência da Computação, faço cursos
-          técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios.
-          Gosto de aprender, resolver problemas e transformar ideias em código.</p>
+        <p class="card-text">Sou estudante de Ciência da Computação e apaixonado por tecnologia e programação, com experiência prática em    desenvolvimento de sistemas e criação de sites, com conhecimentos em HTML, CSS, JavaScript, Python, Git e noções de Bootstrap, acessibilidade e usabilidade. Faço cursos técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios. Gosto de aprender, resolver problemas e transformar ideias em código.</p>
       </div>
 
       <div class=" gap-2 d-md-block mb-2" style="align-self: center;">
@@ -140,6 +128,14 @@
 
   <section>
 
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/Bootstrap/assets/Bootstrap.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          Made With Bootstrap
+        </a>
+      </div>
+    </nav>
 
   </section>
 
