--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -70,7 +70,7 @@
         <h2 class="card-title">Sobre Mim</h2>
         </br>
 
-        <p class="card-text">Sou estudante de Ciência da Computação e apaixonado por tecnologia e programação, com experiência prática em    desenvolvimento de sistemas e criação de sites, com conhecimentos em HTML, CSS, JavaScript, Python, Git e noções de Bootstrap, acessibilidade e usabilidade. Faço cursos técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios. Gosto de aprender, resolver problemas e transformar ideias em código.</p>
+        <p class="card-text" style="text-align: justify;">Sou estudante de Ciência da Computação e apaixonado por tecnologia e programação, com experiência prática em    desenvolvimento de sistemas e criação de sites, com conhecimentos em HTML, CSS, JavaScript, Python, Git e noções de Bootstrap, acessibilidade e usabilidade. Faço cursos técnicos e busco sempre evoluir, seja criando soluções reais para empresas ou desenvolvendo projetos próprios. Gosto de aprender, resolver problemas e transformar ideias em código.</p>
       </div>
 
       <div class=" gap-2 d-md-block mb-2" style="align-self: center;">
